--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -1,21 +1,144 @@
 {% extends 'all/base.html' %}{% block title %}Model select{% endblock %}
 {% block content %}
 <h1>Model search results</h1>
-<table class="table"><tr>
-<th>PDB ID</th>
+
+<b>Show columns:</b>
+<form>
+<input type="checkbox" id="Target" onclick="react(1);" checked>Target&nbsp
+<input type="checkbox" id="Difficulty" onclick="react(2);" checked>Difficulty&nbsp
+<input type="checkbox" id="Method" onclick="react(3);" checked>Method&nbsp
+<input type="checkbox" id="Refinement" onclick="react(4);" checked>Refinement&nbsp
+<input type="checkbox" id="I-RMSD" onclick="react(5);" checked>I-RMSD&nbsp
+<input type="checkbox" id="I-RMSD" onclick="react(6);" checked>L-RMSD&nbsp
+<input type="checkbox" id="I-RMSD" onclick="react(7);" checked>R-RMSD&nbsp
+<input type="checkbox" id="Fnat" onclick="react(8);" checked>Fnat
+</form>
+<br>
+
+<script>
+function react(i) {
+$('#model_select_table td:nth-child('+i+'), th:nth-child('+i+')').toggle();
+};
+</script>
+
+<table id="model_select_table" class="tablesorter">
+<thead>
+<tr>
+<th>Target</th>
+<th>Difficulty</th>
 <th>Method</th>
-<th>ZRANK score</th>
-<th>L-RMSD<th>
+<th>Refinement</th>
+<th>I-RMSD</th>
+<th>L-RMSD</th>
+<th>R-RMSD</th>
+<th>Fnat</th>
 </tr>
+</thead>
+<tbody>
 {% for model in results %}
 	<tr>
-	<td>{{ model.target }}</td>
-	<td>{{ model.method }}</td>
-	<td></td>
-	<td></td>
+	<td>{{ model.target.name }}</td>
+	<td>{{ model.target.difficulty }}</td>
+	<td>{{ model.method.name }}</td>
+	<td>{{ model.refinement.name }}</td>
+	<td>{{ model.i_rmsd }}</td>
+	<td>{{ model.l_rmsd }}</td>
+	<td>{{ model.r_rmsd }}</td>
+	<td>{{ model.fnat }}</td>
 	<td><a href="{% url 'model' model.id %}">View model</a></td>
-	<td><a href="{% url 'target_info' model.name %}">View target</a></td>
+	<td><a href="{% url 'target_info' model.target.name %}">View target</a></td> 
 	</tr>
-{% endfor %}</table>
+{% endfor %}
+</tbody>
+</table>
+
+<div id="ts-pager" class="ts-pager">
+  <form>
+    <img src="/static/tablesorter/addons/pager/icons/first.png" class="first"/>
+    <img src="/static/tablesorter/addons/pager/icons/prev.png" class="prev"/>
+    <span class="pagedisplay"></span> <!-- this can be any element, including an input -->
+    <img src="/static/tablesorter/addons/pager/icons/next.png" class="next"/>
+    <img src="/static/tablesorter/addons/pager/icons/last.png" class="last"/>
+    <select class="pagesize">
+      <option selected="selected" value="10">10</option>
+      <option value="20">20</option>
+      <option value="30">30</option>
+      <option value="40">40</option>
+    </select>
+  </form>
+</div>
 <a href="{% url 'search' %}">Back to search</a>
+<script>
+
+$(function() {
+
+  $.extend($.tablesorter.themes.bootstrap, {
+    // these classes are added to the table. To see other table classes available,
+    // look here: http://twitter.github.com/bootstrap/base-css.html#tables
+    table      : 'table table-bordered',
+    caption    : 'caption',
+    header     : 'bootstrap-header', // give the header a gradient background
+    footerRow  : '',
+    footerCells: '',
+    icons      : '', // add "icon-white" to make them white; this icon class is added to the <i> in the header
+    sortNone   : 'bootstrap-icon-unsorted',
+    sortAsc    : 'icon-chevron-up glyphicon glyphicon-chevron-up',     // includes classes for Bootstrap v2 & v3
+    sortDesc   : 'icon-chevron-down glyphicon glyphicon-chevron-down', // includes classes for Bootstrap v2 & v3
+    active     : '', // applied when column is sorted
+    hover      : '', // use custom css here - bootstrap class may not override it
+    filterRow  : '', // filter row class
+    even       : '', // odd row zebra striping
+    odd        : ''  // even row zebra striping
+  });
+
+  // call the tablesorter plugin and apply the uitheme widget
+  $("table").tablesorter({
+    // this will apply the bootstrap theme if "uitheme" widget is included
+    // the widgetOptions.uitheme is no longer required to be set
+    theme : "bootstrap",
+
+    widthFixed: true,
+
+    headerTemplate : '{content} {icon}', // new in v2.7. Needed to add the bootstrap icon!
+
+    // widget code contained in the jquery.tablesorter.widgets.js file
+    // use the zebra stripe widget if you plan on hiding any rows (filter widget)
+    widgets : [ "uitheme", "filter", "zebra" ],
+
+    widgetOptions : {
+      // using the default zebra striping class name, so it actually isn't included in the theme variable above
+      // this is ONLY needed for bootstrap theming if you are using the filter widget, because rows are hidden
+      zebra : ["even", "odd"],
+
+      // reset filters button
+      filter_reset : ".reset"
+
+      // set the uitheme widget to use the bootstrap theme class names
+      // this is no longer required, if theme is set
+      // ,uitheme : "bootstrap"
+
+    }
+  })
+  .tablesorterPager({
+
+    // target the pager markup - see the HTML block below
+    container: $(".ts-pager"),
+
+    // target the pager page select dropdown - choose a page
+    cssGoto  : ".pagenum",
+
+    // remove rows from the table to speed up the sort of large tables.
+    // setting this to false, only hides the non-visible rows; needed if you plan to add/remove rows with the pager enabled.
+    removeRows: false,
+
+    // output string - default is '{page}/{totalPages}';
+    // possible variables: {page}, {totalPages}, {filteredPages}, {startRow}, {endRow}, {filteredRows} and {totalRows}
+    output: '{startRow} - {endRow} / {filteredRows} ({totalRows})'
+
+  });
+
+});
+
+</script>
 {% endblock %}
+
