--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -30,6 +30,12 @@
 <script src="https://raw.github.com/enyo/opentip/master/downloads/opentip-jquery-excanvas.min.js"></script>
 <link href="/static/opentip.css" rel="stylesheet">
 
+<!--tablesorter-->
+<link rel="stylesheet" href="/static/tablesorter/css/theme.bootstrap.css">
+<script src="/static/tablesorter/js/jquery.tablesorter.js"></script>
+<script src="/static/tablesorter/js/jquery.tablesorter.widgets.js"></script>
+<script src="/static/tablesorter/addons/pager/jquery.tablesorter.pager.js"></script>
+
 </head>
 
 <body class="container">
