--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -5,11 +5,12 @@
 </title>
 {% load staticfiles %}
 
+<!--jquery, used by bootstrap, highcharts, jsmol, tablesorter and opentip-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+
 <!--bootstrap-->
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
-
-<!--jquery, used by highcharts, jsmol and opentip-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="https://raw.github.com/twbs/bootstrap/master/dist/js/bootstrap.min.js"></script>
 
 <!--highcharts-->
 <script src="http://code.highcharts.com/highcharts.js"></script>
@@ -36,9 +37,88 @@
 <script src="/static/tablesorter/js/jquery.tablesorter.widgets.js"></script>
 <script src="/static/tablesorter/addons/pager/jquery.tablesorter.pager.js"></script>
 
+<!--account for navbar-->
+<style>
+body {
+padding-top: 60px;
+}
+</style>
+
 </head>
 
 <body class="container">
+
+<!-- Nav bar -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="navbar-inner">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{% url 'search' %}"><span class="glyphicon glyphicon-home"></span> Dockit</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Target<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="{% url 'target' %}">View all benchmarks</a></li>
+            <li class="divider"></li>
+            <form name="target_select_nav">
+		<tr><td>Select from all targets:</td>
+		<td><select name="target_choice_all" onChange=goTo(document.target_select_nav.target_choice_all.options[document.target_select_nav.target_choice_all.selectedIndex].value) style="width: 90px">
+		{% for complex in Target %}
+			<option value={{ complex.name }}>{{ complex.name }}</option>
+		{% endfor %}</select></td></tr>
+
+		<tr><td>Select from rigid targets:</td>
+		<td><select name="target_choice_rig" onChange=goTo(document.target_select_nav.target_choice_rig.options[document.target_select_nav.target_choice_rig.selectedIndex].value) style="width: 90px">
+		{% for complex in Rigid %}
+			<option value={{ complex.name }}>{{ complex.name }}</option>
+		{% endfor %}</select></td></tr>
+
+		<tr><td>Select from medium targets:</td>
+		<td><select name="target_choice_med" onChange=goTo(document.target_select_nav.target_choice_med.options[document.target_select_nav.target_choice_med.selectedIndex].value) style="width: 90px">
+		{% for complex in Medium %}
+			<option value={{ complex.name }}>{{ complex.name }}</option>
+		{% endfor %}</select></td></tr>
+
+		<tr><td>Select from difficult targets:</td>
+		<td><select name="target_choice_diff" onChange=goTo(document.target_select_nav.target_choice_diff.options[document.target_select_nav.target_choice_diff.selectedIndex].value) style="width: 90px">
+		{% for complex in Difficult %}
+			<option value={{ complex.name }}>{{ complex.name }}</option>
+		{% endfor %}</select></td></tr>
+		</form></table>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Model<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <form method='POST'>{% csrf_token %}
+            <table class="table">{{ form.as_table }}</table>
+            <input type="submit" value="Submit" /></form>
+          </ul>
+        </li>
+	<li><a href="{% url 'method' %}">Methods</a></li>
+	<li><a href="{% url 'summary' '1BGX' %}">Summary</a></li>
+	<li><a href="{% url 'scoring' 'PISA' '1BGX' %}">Scoring</a></li>
+	<li><a href="{% url 'refinement' %}">Refinement</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="{% url 'about' %}">About</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+  </div>
+</nav>
+
 {% block content %}
 {% endblock %}
 </body></html>
