--- a/all/templates/all/method.html
+++ b/all/templates/all/method.html
@@ -1,6 +1,9 @@
 {% extends 'all/base.html' %}{% block title %}Methods{% endblock %}
 {% block content %}
-<h1>Docking methods</h1>
+
+<div class="page-header">
+<h1>Docking methods <small>Some text</small></h1>
+</div>
 
 This page will have information on each docking method, links to papers etc..
 
