--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -1,6 +1,9 @@
 {% extends 'all/base.html' %}{% block title %}Model select{% endblock %}
 {% block content %}
-<h1>Model search results</h1>
+
+<div class="page-header">
+<h1>Model search results <small>Some text</small></h1>
+</div>
 
 <b>Show columns:</b>
 <form>
