--- a/all/templates/all/refinement.html
+++ b/all/templates/all/refinement.html
@@ -1,6 +1,9 @@
 {% extends 'all/base.html' %}{% block title %}Refinement{% endblock %}
 {% block content %}
-<h1>Refinement</h1>
+
+<div class="page-header">
+<h1>Refinement <small>Some text</small></h1>
+</div>
 
 <div id="refinement_graph" style="width:100%; height:600px;"></div>
 
