--- a/all/templates/all/scoring.html
+++ b/all/templates/all/scoring.html
@@ -1,6 +1,9 @@
 {% extends 'all/base.html' %}{% block title %}Scoring{% endblock %}
 {% block content %}
-<h1>Scoring</h1>
+
+<div class="page-header">
+<h1>Scoring <small>Some text</small></h1>
+</div>
 
 <div id="scoring_graph" style="width:100%; height:600px;"></div>
 
