--- a/all/templates/all/summary.html
+++ b/all/templates/all/summary.html
@@ -1,6 +1,9 @@
 {% extends 'all/base.html' %}{% block title %}Summary{% endblock %}
 {% block content %}
-<h1>Summary</h1>
+
+<div class="page-header">
+<h1>Summary <small>Some text</small></h1>
+</div>
 
 <div id="method_comparison" style="width:100%; height:600px;"></div>
 
