--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -1,57 +1,64 @@
 {% extends 'all/base.html' %}{% block title %}Model select{% endblock %}
 {% block content %}
+
 <h1>Model search results</h1>
 
 <b>Show columns:</b>
-<form>
-<input type="checkbox" id="Target" onclick="react(1);" checked>Target&nbsp
-<input type="checkbox" id="Difficulty" onclick="react(2);" checked>Difficulty&nbsp
-<input type="checkbox" id="Method" onclick="react(3);" checked>Method&nbsp
-<input type="checkbox" id="Refinement" onclick="react(4);" checked>Refinement&nbsp
-<input type="checkbox" id="I-RMSD" onclick="react(5);" checked>I-RMSD&nbsp
-<input type="checkbox" id="I-RMSD" onclick="react(6);" checked>L-RMSD&nbsp
-<input type="checkbox" id="I-RMSD" onclick="react(7);" checked>R-RMSD&nbsp
-<input type="checkbox" id="Fnat" onclick="react(8);" checked>Fnat
+<form id="columnselector">
+<input type="checkbox" id="target.name" name="Target" onclick="refreshtable();" checked>Target&nbsp
+<input type="checkbox" id="target.difficulty" name="Difficulty" onclick="refreshtable();" checked>Difficulty&nbsp
+<input type="checkbox" id="method.name" name="Method" onclick="refreshtable();" checked>Method&nbsp
+<input type="checkbox" id="refinement.name" name="Refinement" onclick="refreshtable();" checked>Refinement&nbsp
+<input type="checkbox" id="i_rmsd" name="I-RMSD" onclick="refreshtable();" checked>I-RMSD&nbsp
+<input type="checkbox" id="l_rmsd" name="L-RMSD" onclick="refreshtable();" checked>L-RMSD&nbsp
+<input type="checkbox" id="r_rmsd" name="R-RMSD" onclick="refreshtable();" checked>R-RMSD&nbsp
+<input type="checkbox" id="fnat" name="Fnat" onclick="refreshtable();" checked>Fnat&nbsp
+<input type="checkbox" id="i_l_rmsd" name="I-L-RMSD" onclick="refreshtable();" >I-L-RMSD&nbsp
+<input type="checkbox" id="target.receptor" name="Receptor_PDB_ID" onclick="refreshtable();" >Receptor PDB ID
+<input type="checkbox" id="target.ligand" name="Ligand_PDB_ID" onclick="refreshtable();" >Ligand PDB ID
 </form>
 <br>
 
-<script>
-function react(i) {
-$('#model_select_table td:nth-child('+i+'), th:nth-child('+i+')').toggle();
-};
-</script>
-
-<table id="model_select_table" class="tablesorter">
+<table id="model_select_template" class="table" style='display:none;'>
 <thead>
 <tr>
-<th>Target</th>
-<th>Difficulty</th>
-<th>Method</th>
-<th>Refinement</th>
-<th>I-RMSD</th>
-<th>L-RMSD</th>
-<th>R-RMSD</th>
-<th>Fnat</th>
+<!--<th class="filter-false">Select</th>-->
+<th class="th.target.name" data-placeholder="e.g. '1ACB'">Target</th>
+<th class="th.target.difficulty" data-placeholder="e.g. 'Rigid'">Difficulty</th>
+<th class="th.method.name" data-placeholder="e.g. 'ZDOCK or Hex'">Method</th>
+<th class="th.refinement.name" data-placeholder="e.g. '!Nothing'">Refinement</th>
+<th class="th.i_rmsd" data-placeholder="e.g. '<=8'">I-RMSD</th>
+<th class="th.l_rmsd" data-placeholder="e.g. '<15'">L-RMSD</th>
+<th class="th.r_rmsd" data-placeholder="e.g. '<4'">R-RMSD</th>
+<th class="th.fnat" data-placeholder="e.g. '>0.5'">Fnat</th>
+<th class="th.i_l_rmsd" data-placeholder="e.g. '<3.1'">I-L-RMSD</th>
+<th class="th.target.receptor" data-placeholder="e.g. '1BVL'">Receptor PDB ID</th>
+<th class="th.target.ligand" data-placeholder="e.g. '3LZT'">Ligand PDB ID</th>
 </tr>
+
 </thead>
 <tbody>
 {% for model in results %}
-	<tr>
-	<td>{{ model.target.name }}</td>
-	<td>{{ model.target.difficulty }}</td>
-	<td>{{ model.method.name }}</td>
-	<td>{{ model.refinement.name }}</td>
-	<td>{{ model.i_rmsd }}</td>
-	<td>{{ model.l_rmsd }}</td>
-	<td>{{ model.r_rmsd }}</td>
-	<td>{{ model.fnat }}</td>
-	<td><a href="{% url 'model' model.id %}">View model</a></td>
-	<td><a href="{% url 'target_info' model.target.name %}">View target</a></td> 
+	<tr class="bodytr">
+<!--	<td><input type="checkbox"></td>-->
+	<td class="td.target.name" style='width:110px'><a href="{% url 'target_info' model.target.name %}">{{ model.target.name }}</a></td>
+	<td class="td.target.difficulty">{{ model.target.difficulty }}</td>
+	<td class="td.method.name" style='width:160px'>{{ model.method.name }}</td>
+	<td class="td.refinement.name" style='width:135px'>{{ model.refinement.name }}</td>
+	<td class="td.i_rmsd">{{ model.i_rmsd }}</td>
+	<td class="td.l_rmsd">{{ model.l_rmsd }}</td>
+	<td class="td.r_rmsd">{{ model.r_rmsd }}</td>
+	<td class="td.fnat" style='width:100px'>{{ model.fnat }}</td>
+	<td class="td.i_l_rmsd">{{ model.i_l_rmsd }}</td>
+	<td class="td.target.receptor"><a href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target.receptor }}">{{ model.target.receptor }}</a></td>
+	<td class="td.target.ligand"><a href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target.ligand }}">{{ model.target.ligand }}</a></td>
+	<td class="td.viewmodel" style='width:95px'><a href="{% url 'model' model.id %}">View model</a></td>
+	<td class="td.viewallmodels" style='width:180px'><a href="{% url 'target_models' model.target.name %}">View all models for {{model.target.name}}</a></td> 
 	</tr>
 {% endfor %}
 </tbody>
 </table>
-
+<table id="model_select_table" class="tablesorter"></table>
 <div id="ts-pager" class="ts-pager">
   <form>
     <img src="/static/tablesorter/addons/pager/icons/first.png" class="first"/>
@@ -67,7 +74,37 @@ $('#model_select_table td:nth-child('+i+'), th:nth-child('+i+')').toggle();
     </select>
   </form>
 </div>
+<br>
 <a href="{% url 'search' %}">Back to search</a>
+
+<script>
+
+function refreshtable(){
+    var th='.th\\.';
+    var td='.td\\.';
+    var template=document.getElementById('model_select_template');
+    var tbl=document.getElementById('model_select_table');
+    var intable=template.innerHTML;
+    tbl.innerHTML = intable;
+    var form=document.getElementById('columnselector');
+    var columns=form.getElementsByTagName('input');
+    for(var i=0; i<columns.length; i++) {
+	if (!columns[i].checked) {
+            var rawid=columns[i].id;
+            var id = rawid.replace(".", "\\.");
+            var headerclass=th+id;
+            var cellclass=td+id;
+            $('#model_select_table ' + headerclass).remove();
+            $('#model_select_table ' + cellclass).remove();
+	}
+    }
+$('.tablesorter').trigger("updateAll");
+}
+
+</script>
+
+
+
 <script>
 
 $(function() {
@@ -92,7 +129,13 @@ $(function() {
   });
 
   // call the tablesorter plugin and apply the uitheme widget
-  $("table").tablesorter({
+  $(".tablesorter").tablesorter({
+
+    headers: {
+//	0: {
+//	    sorter: false
+//	}
+    },
     // this will apply the bootstrap theme if "uitheme" widget is included
     // the widgetOptions.uitheme is no longer required to be set
     theme : "bootstrap",
@@ -140,5 +183,13 @@ $(function() {
 });
 
 </script>
+
+
+<script>
+$( document ).ready(refreshtable() );
+</script>
+
+
+
 {% endblock %}
 
