--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -109,7 +109,7 @@ padding-top: 60px;
 	<li><a href="{% url 'method' %}">Methods</a></li>
 	<li><a href="{% url 'summary' '1BGX' %}">Summary</a></li>
 	<li><a href="{% url 'scoring' 'PISA' '1BGX' %}">Scoring</a></li>
-	<li><a href="{% url 'refinement' %}">Refinement</a></li>
+	<li><a href="{% url 'refinement' 'ZDOCK' 'FiberDock' '1ACB' %}">Refinement</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{% url 'about' %}">About</a></li>
