--- a/all/templates/all/target.html
+++ b/all/templates/all/target.html
@@ -1,6 +1,7 @@
 {% extends 'all/base.html' %}
 {% block title %}Targets{% endblock %}
 {% block content %}
+{% load static from staticfiles %}
 
 <div class="page-header">
 <h1>Targets <small>Some text</small></h1>
