--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -3,7 +3,7 @@
 {% block title %}
 {% endblock %}
 </title>
-{% load staticfiles %}
+{% load static from staticfiles %}
 
 <!--jquery, used by bootstrap, highcharts, jsmol, tablesorter and opentip-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -16,26 +16,26 @@
 <script src="http://code.highcharts.com/highcharts.js"></script>
 
 <!--jsmol-->
-<script src="/static/jsmol/js/JSmolCore.js"></script>
-<script src="/static/jsmol/js/JSmol.js"></script>
-<script src="/static/jsmol/js/JSmolApplet.js"></script>
-<script src="/static/jsmol/js/JSmolControls.js"></script>
-<script src="/static/jsmol/js/JSmolApi.js"></script>
-<script src="/static/jsmol/js/j2sjmol.js"></script>
-<script src="/static/jsmol/js/JSmoljQueryExt.js"></script>
+<script src="{% static "jsmol/js/JSmolCore.js" %}"></script>
+<script src="{% static "jsmol/js/JSmol.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolApplet.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolControls.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolApi.js" %}"></script>
+<script src="{% static "jsmol/js/j2sjmol.js" %}"></script>
+<script src="{% static "jsmol/js/JSmoljQueryExt.js" %}"></script>
 
-<!--personal jsmol functions -->
-<script src="/static/jsmol_functions.js"></script>
+<!--personal jsmol functions-->
+<script src="{% static "jsmol_functions.js" %}"></script>
 
 <!--opentip-->
 <script src="https://raw.github.com/enyo/opentip/master/downloads/opentip-jquery-excanvas.min.js"></script>
-<link href="/static/opentip.css" rel="stylesheet">
+<link href="{% static "opentip.css" %}" rel="stylesheet">
 
 <!--tablesorter-->
-<link rel="stylesheet" href="/static/tablesorter/css/theme.bootstrap.css">
-<script src="/static/tablesorter/js/jquery.tablesorter.js"></script>
-<script src="/static/tablesorter/js/jquery.tablesorter.widgets.js"></script>
-<script src="/static/tablesorter/addons/pager/jquery.tablesorter.pager.js"></script>
+<link rel="stylesheet" href="{% static "tablesorter/css/theme.bootstrap.css" %}">
+<script src="{% static "tablesorter/js/jquery.tablesorter.js" %}"></script>
+<script src="{% static "tablesorter/js/jquery.tablesorter.widgets.js" %}"></script>
+<script src="{% static "tablesorter/addons/pager/jquery.tablesorter.pager.js" %}"></script>
 
 <!--account for navbar-->
 <style>
@@ -45,7 +45,6 @@ padding-top: 60px;
 </style>
 
 </head>
-
 <body class="container">
 
 <!-- Nav bar -->
