--- a/all/templates/all/method.html
+++ b/all/templates/all/method.html
@@ -1,5 +1,6 @@
 {% extends 'all/base.html' %}{% block title %}Methods{% endblock %}
 {% block content %}
+{% load static from staticfiles %}
 
 <div class="page-header">
 <h1>Docking methods <small>Some text</small></h1>
