--- a/all/templates/all/model.html
+++ b/all/templates/all/model.html
@@ -1,5 +1,6 @@
 {% extends 'all/base.html' %}{% block title %}{{ model.name }}{% endblock %}
 {% block content %}
+{% load static from staticfiles %}
 
 <div class="page-header">
 <h1>Model details <small>Some text</small></h1>
@@ -62,7 +63,8 @@ var inp_int_10A_residues = "{{ inp_int_10A_residues }}";
 
 //initial commands to set up
 //main difference to target page is that the model is one pdb file
-var input = "background black; load FILES \"/static/benchmarks/{{ model.target.name }}_r_b.pdb\" \"/static/benchmarks/{{ model.target.name }}_l_b.pdb\" \"/static/1ZM4_cluspro-balanced_nothing_1.pdb-A-fitted\"; CARTOON only; frame ALL;";
+var file_names = ["{% static file_names.rb %}","{% static file_names.lb %}","{% static file_names.model %}"];
+var input = "background black; load FILES \""+file_names[0]+"\" \""+file_names[1]+"\" \""+file_names[2]+"\"; CARTOON only; frame ALL;";
 input += "select */1; color translucent 0.7 "+rec_colours[0]+";";
 input += "select */2; color translucent 0.7 "+lig_colours[0]+";";
 input += "select {"+"{{ model_rec_chains }}"+"}; color translucent 0.7 "+rec_colours[1]+";";
