--- a/all/templates/all/summary.html
+++ b/all/templates/all/summary.html
@@ -1,5 +1,6 @@
 {% extends 'all/base.html' %}{% block title %}Summary{% endblock %}
 {% block content %}
+{% load static from staticfiles %}
 
 <div class="page-header">
 <h1>Summary <small>Some text</small></h1>
