--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -37,6 +37,10 @@
 <script src="/static/tablesorter/js/jquery.tablesorter.widgets.js"></script>
 <script src="/static/tablesorter/addons/pager/jquery.tablesorter.pager.js"></script>
 
+<!--call tablesorter on .tablesorter tables-->
+<script src="/static/tablesorter_function.js"></script>
+
+
 <!--account for navbar-->
 <style>
 body {
