--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -50,8 +50,8 @@
 <td class="td.r_rmsd">{{ model.r_rmsd }}</td>
 <td class="td.fnat" style='width:100px'>{{ model.fnat }}</td>
 <td class="td.i_l_rmsd">{{ model.i_l_rmsd }}</td>
-<td class="td.target.receptor"><a href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target.receptor }}">{{ model.target.receptor }}</a></td>
-<td class="td.target.ligand"><a href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target.ligand }}">{{ model.target.ligand }}</a></td>
+<td class="td.target.receptor"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target.receptor }}">{{ model.target.receptor }}</a></td>
+<td class="td.target.ligand"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target.ligand }}">{{ model.target.ligand }}</a></td>
 <td class="td.viewmodel" style='width:95px'><a href="{% url 'model' model.id %}">View model</a></td>
 <td class="td.viewallmodels" style='width:180px'><a href="{% url 'target_models' model.target.name %}">View all models for {{model.target.name}}</a></td>
 </tr>
@@ -89,7 +89,7 @@ function refreshtable(){
     var form=document.getElementById('columnselector');
     var columns=form.getElementsByTagName('input');
     for(var i=0; i<columns.length; i++) {
-if (!columns[i].checked) {
+	if (!columns[i].checked) {
             var rawid=columns[i].id;
             var id = rawid.replace(".", "\\.");
             var headerclass=th+id;
@@ -103,92 +103,8 @@ $('.tablesorter').trigger("updateAll");
 
 </script>
 
-
-
-<script>
-
-$(function() {
-
-  $.extend($.tablesorter.themes.bootstrap, {
-    // these classes are added to the table. To see other table classes available,
-    // look here: http://twitter.github.com/bootstrap/base-css.html#tables
-    table : 'table table-bordered',
-    caption : 'caption',
-    header : 'bootstrap-header', // give the header a gradient background
-    footerRow : '',
-    footerCells: '',
-    icons : '', // add "icon-white" to make them white; this icon class is added to the <i> in the header
-    sortNone : 'bootstrap-icon-unsorted',
-    sortAsc : 'icon-chevron-up glyphicon glyphicon-chevron-up', // includes classes for Bootstrap v2 & v3
-    sortDesc : 'icon-chevron-down glyphicon glyphicon-chevron-down', // includes classes for Bootstrap v2 & v3
-    active : '', // applied when column is sorted
-    hover : '', // use custom css here - bootstrap class may not override it
-    filterRow : '', // filter row class
-    even : '', // odd row zebra striping
-    odd : '' // even row zebra striping
-  });
-
-  // call the tablesorter plugin and apply the uitheme widget
-  $(".tablesorter").tablesorter({
-
-    headers: {
-// 0: {
-// sorter: false
-// }
-    },
-    // this will apply the bootstrap theme if "uitheme" widget is included
-    // the widgetOptions.uitheme is no longer required to be set
-    theme : "bootstrap",
-
-    widthFixed: true,
-
-    headerTemplate : '{content} {icon}', // new in v2.7. Needed to add the bootstrap icon!
-
-    // widget code contained in the jquery.tablesorter.widgets.js file
-    // use the zebra stripe widget if you plan on hiding any rows (filter widget)
-    widgets : [ "uitheme", "filter", "zebra" ],
-
-    widgetOptions : {
-      // using the default zebra striping class name, so it actually isn't included in the theme variable above
-      // this is ONLY needed for bootstrap theming if you are using the filter widget, because rows are hidden
-      zebra : ["even", "odd"],
-
-      // reset filters button
-      filter_reset : ".reset"
-
-      // set the uitheme widget to use the bootstrap theme class names
-      // this is no longer required, if theme is set
-      // ,uitheme : "bootstrap"
-
-    }
-  })
-  .tablesorterPager({
-
-    // target the pager markup - see the HTML block below
-    container: $(".ts-pager"),
-
-    // target the pager page select dropdown - choose a page
-    cssGoto : ".pagenum",
-
-    // remove rows from the table to speed up the sort of large tables.
-    // setting this to false, only hides the non-visible rows; needed if you plan to add/remove rows with the pager enabled.
-    removeRows: false,
-
-    // output string - default is '{page}/{totalPages}';
-    // possible variables: {page}, {totalPages}, {filteredPages}, {startRow}, {endRow}, {filteredRows} and {totalRows}
-    output: '{startRow} - {endRow} / {filteredRows} ({totalRows})'
-
-  });
-
-});
-
-</script>
-
-
 <script>
 $( document ).ready(refreshtable() );
 </script>
-
-
 
 {% endblock %}
