--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -14,6 +14,7 @@
 
 <!--highcharts-->
 <script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/highcharts-more.js"></script>
 
 <!--jsmol-->
 <script src="{% static "jsmol/js/JSmolCore.js" %}"></script>
@@ -25,7 +26,7 @@
 <script src="{% static "jsmol/js/JSmoljQueryExt.js" %}"></script>
 
 <!--personal jsmol functions-->
-<script src="{% static "jsmol_functions.js" %}"></script>
+<script src="{% static "jsmol_functions_temp.js" %}"></script>
 
 <!--opentip-->
 <script src="https://raw.github.com/enyo/opentip/master/downloads/opentip-jquery-excanvas.min.js"></script>
@@ -36,6 +37,25 @@
 <script src="{% static "tablesorter/js/jquery.tablesorter.js" %}"></script>
 <script src="{% static "tablesorter/js/jquery.tablesorter.widgets.js" %}"></script>
 <script src="{% static "tablesorter/addons/pager/jquery.tablesorter.pager.js" %}"></script>
+
+<!--call tablesorter on .tablesorter tables-->
+<script src="/static/tablesorter_function.js"></script>
+
+<!--script for target dropdown in navbar-->
+<script>
+function goTo(name) {
+	//needs changing to reverse url search
+	document.location.href="http://127.0.0.1:8000/target/"+name;
+}
+
+//info for JSMol window
+var info = {
+width: 720,
+height: 720,
+j2sPath: "{% static "jsmol/j2s" %}",
+console: "jmolApplet0_infodiv",
+};
+</script>
 
 <!--account for navbar-->
 <style>
@@ -48,7 +68,7 @@ padding-top: 60px;
 <body class="container">
 
 <!-- Nav bar -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="z-index:9999;">
   <div class="navbar-inner">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -117,6 +137,13 @@ padding-top: 60px;
   </div><!-- /.container-fluid -->
   </div>
 </nav>
+
+<!--script to stop dropdown collapsing on click of target select-->
+<script type="text/javascript">
+    $('.dropdown-menu table, .dropdown-menu label').click(function(e) {
+        e.stopPropagation();
+    });
+</script>
 
 {% block content %}
 {% endblock %}
