--- a/all/templates/all/refinement.html
+++ b/all/templates/all/refinement.html
@@ -8,6 +8,8 @@
 
 <div id="refinement_graph" style="width:100%; height:600px;"></div>
 
+<div id="slider"></div>
+
 <script>
 //change refinement graph when options are changed
 function change_graph(target,method,refinement) {
@@ -41,7 +43,12 @@ $(function () {
 	yAxis: {
 		title: {
 			text: 'Change in I-RMSD on {{ refinement }} refinement'
-		}
+		},
+		plotLines: [{
+			color: '#FF0000',
+			width: 2,
+			value: 0
+            	}]
 	},
 	plotOptions: {
 		series: {
@@ -72,11 +79,22 @@ $(function () {
 		marker : {
 			symbol: 'circle',
 			radius: 2
-		}}, {
-		type: 'line',
-		data: [[0,0],[20,0]]
+		}
 	}]
 	});
+
+	var gaugeChartObj = new Highcharts.Chart(refinement_graph);
+
+	$("#slider").slider({
+        value: 20,
+        range: "min",
+        min: 0,
+        max: 50,
+        animate: true,
+        slide: function (event, ui) {
+             gaugeChartObj.xAxis[0].max = ui.value;
+        }
+        });
 });
 </script>
 
